fixed spacing on reservations section

--- a/css/style.css
+++ b/css/style.css
@@ -352,28 +352,35 @@ a {
   height: 700px;
 }
 
-.gallery .left-img {
+.gallery .gallery-carousel {
   width: 70%;
   height: 100%;
   float: left;
 }
 
-.gallery .gallery-carousel {
+.gallery .chefs-special {
   width: 30%;
   float: right;
 }
 
-.gallery .gallery-carousel .circle {
+.gallery .chefs-special h3 {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.gallery .chefs-special .circle {
   display: block;
-  margin: 20px auto;
+  margin: 40px auto;
   width: 150px;
   height: 150px;
   background: #e6e7ed;
   border-radius: 50%;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
-.gallery .gallery-carousel p {
-  text-align: center;
+.gallery .chefs-special .circle:hover {
+  opacity: 0.7;
 }
 
 .menu {
@@ -464,6 +471,7 @@ a {
 .reservations {
   padding: 50px;
   text-align: center;
+  height: 600px;
 }
 
 .reservations input {
@@ -581,6 +589,10 @@ a {
   .menu {
     height: 700px;
   }
+
+  .reservations {
+    height: 600px;
+  }
 }
 
 @media screen and (max-width: 635px) {
@@ -610,11 +622,11 @@ a {
     height: 100%;
   }
 
-  .gallery .left-img {
+  .gallery .gallery-carousel {
     display: none;
   }
 
-  .gallery .gallery-carousel {
+  .gallery .chefs-special {
     width: 100%;
   }
 
@@ -643,7 +655,7 @@ a {
   }
 
   .reservations {
-    height: 70%;
+    height: 600px;
   }
 
   .reservations input,
